# mono-addins

./: .gitattributes  .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.include  Mono.Addins.Setup.nuspec  Mono.Addins.mds  Mono.Addins.mdw  Mono.Addins.nuspec  Mono.Addins.sln  README  README.md  TargetFrameworks.props  Version.props  azure-pipelines.yml  compliance.yaml  configure.ac  global.json  index.html  mono-addins-docs.source  mono-addins.spec.in  params.json  policy.config.in  xbuild.include
Mono.Addins.CecilReflector/: AssemblyInfo.cs  ChangeLog  Makefile.am  Mono.Addins.CecilReflector.csproj  Mono.Addins.CecilReflector.mdp  packages.config
Mono.Addins.CecilReflector/Mono.Addins.CecilReflector/: Reflector.cs
Mono.Addins.CecilReflector/Mono.Cecil/: ChangeLog  Mono.Cecil.csproj
Mono.Addins.Gui/: AssemblyInfo.cs  ChangeLog  Makefile.am  Mono.Addins.Gui.csproj  Mono.Addins.Gui.mdp  mono-addins-gui.pc.in
Mono.Addins.Gui/Gui/: Mono.Addins.Gui.AddinInfoView.cs  Mono.Addins.Gui.AddinInstallerDialog.cs  Mono.Addins.Gui.AddinManagerDialog.cs  Mono.Addins.Gui.ErrorDialog.cs  Mono.Addins.Gui.InstallDialog.cs  Mono.Addins.Gui.ManageSitesDialog.cs  Mono.Addins.Gui.NewSiteDialog.cs  Mono.Addins.Gui.ProgressDialog.cs  generated.cs
Mono.Addins.Gui/Mono.Addins.Gui/: AddinInfoDialog.cs  AddinInfoView.cs  AddinInstallDialog.cs  AddinInstallerDialog.cs  AddinManagerDialog.cs  AddinManagerWindow.cs  AddinTreeWidget.cs  ErrorDialog.cs  HeaderBox.cs  HoverImageButton.cs  HslColor.cs  InstallDialog.cs  InstallMonitor.cs  ManageSitesDialog.cs  NewSiteDialog.cs  ProgressDialog.cs  SearchEntry.cs  Services.cs
Mono.Addins.Gui/gtk-gui/: Mono.Addins.Gui.AddinInfoDialog.cs  Mono.Addins.Gui.AddinInfoView.cs  Mono.Addins.Gui.AddinInstallDialog.cs  Mono.Addins.Gui.AddinInstallerDialog.cs  Mono.Addins.Gui.AddinManagerDialog.cs  Mono.Addins.Gui.ErrorDialog.cs  Mono.Addins.Gui.InstallDialog.cs  Mono.Addins.Gui.ManageSitesDialog.cs  Mono.Addins.Gui.NewSiteDialog.cs  Mono.Addins.Gui.ProgressDialog.cs  generated.cs  gui.stetic
Mono.Addins.GuiGtk3/: AssemblyInfo.cs  ChangeLog  Makefile.am  Mono.Addins.GuiGtk3.csproj  mono-addins-gui-gtk3.pc.in
Mono.Addins.GuiGtk3/Mono.Addins.Gui/: AddinInfoView.cs  AddinInstaller.cs  AddinInstallerDialog.cs  AddinManagerDialog.cs  AddinManagerWindow.cs  AddinTreeWidget.cs  ErrorDialog.cs  HeaderBox.cs  HoverImageButton.cs  HslColor.cs  InstallDialog.cs  InstallMonitor.cs  ManageSitesDialog.cs  NewSiteDialog.cs  ProgressDialog.cs  SearchEntry.cs  Services.cs
Mono.Addins.GuiGtk3/interfaces/: AddinInfoView.ui  AddinInfoView.ui.xml  AddinInstallerDialog.ui  AddinInstallerDialog.ui.xml  AddinManagerDialog.ui  AddinManagerDialog.ui.xml  ErrorDialog.ui  ErrorDialog.ui.xml  InstallDialog.ui  InstallDialog.ui.xml  ManageSitesDialog.ui  ManageSitesDialog.ui.xml  NewSiteDialog.ui  NewSiteDialog.ui.xml  ProgressDialog.ui  ProgressDialog.ui.xml
Mono.Addins.MSBuild/: AssemblyInfo.cs  ChangeLog  Makefile.am  Mono.Addins.MSBuild.csproj  Mono.Addins.targets  ResolveAddinReferences.cs  Util.cs  mono-addins-msbuild.pc.in
Mono.Addins.Setup/: AssemblyInfo.cs  ChangeLog  Makefile.am  Mono.Addins.Setup.csproj  Mono.Addins.Setup.mdp  mono-addins-setup.pc.in
Mono.Addins.Setup/Mono.Addins.Setup/: AddinInfo.cs  AddinInfoCollection.cs  AddinPackage.cs  AddinPropertyCollection.cs  AddinRepositoryEntry.cs  AddinRepositoryProvider.cs  AddinScanData.cs  AddinStore.cs  AddinSystemConfiguration.cs  AddinSystemConfigurationReaderWriter.cs  AddinSystemConfigurationSerializer.cs  ConsoleAddinInstaller.cs  DownloadFileRequest.cs  HttpClientProvider.cs  IProgressMonitor.cs  InstallException.cs  MonoAddinsRepositoryProvider.cs  Package.cs  PackageCollection.cs  PcFileCache.cs  ReferenceRepositoryEntry.cs  Repository.cs  RepositoryEntry.cs  RepositoryEntryCollection.cs  RepositoryReaderWriter.cs  RepositoryRecord.cs  RepositoryRegistry.cs  RepositorySerializer.cs  SetupService.cs  SetupTool.cs  TextFormatter.cs  VisualStudioMarketplaceApi.cs  WebRequestHelper.cs  serializers.xml
Mono.Addins.Setup/Mono.Addins.Setup.ProgressMonitoring/: ConsoleProgressMonitor.cs  LogTextWriter.cs  NullProgressMonitor.cs  ProgressStatusMonitor.cs  ProgressTracker.cs
Samples/TextEditorLib/: ChangeLog  MainWindow.cs  Makefile.am  TextEditorLib.csproj  TextEditorLib.mdp
Test/UnitTests/: AddinInformationTests.cs  ChangeLog  IWriter.cs  IWriterWithMetadata.cs  Makefile.am  NodeWithAttribute.cs  SimpleApp.addin.xml  SupportFile.txt  TestAddinDescription.cs  TestBase.cs  TestConditionParser.cs  TestConditions.cs  TestEvents.cs  TestExtensions.cs  TestFileDatabase.cs  TestLoadUnload.cs  TestLoadXmlAddinDescription.cs  TestLocalization.cs  TestLocalization_Types.cs  TestManifest.xml  TestManifest2-bis.xml  TestManifest2.xml  TestManifest3.xml  TestMultithreading.cs  TestScan.cs  TestScanDataFileGeneration.cs  TestSetup.cs  TestSetupService.cs  TestVerifyAddinDescription.cs  UnitTests.csproj  UnitTests.mdp  Util.cs  packages.config  test.addins
docs/: ChangeLog  Makefile.am  docs.mdp  docs.mdproj  index.xml  ns-Mono.Addins.Database.xml  ns-Mono.Addins.Localization.xml
docs/Mono.Addins/: Addin.xml  (+37 more)
docs/Mono.Addins.Database/: DefaultAssemblyReflector.xml  IAssemblyLocator.xml  IAssemblyReflector.xml
docs/Mono.Addins.Description/: AddinDependency.xml  AddinDescription.xml  AddinFlags.xml  AssemblyDependency.xml  Condition.xml  ConditionCollection.xml  ConditionTypeDescription.xml  ConditionTypeDescriptionCollection.xml  Dependency.xml  DependencyCollection.xml  Extension.xml  ExtensionCollection.xml  ExtensionNodeDescription.xml  ExtensionNodeDescriptionCollection.xml  ExtensionNodeSet.xml  ExtensionNodeSetCollection.xml  ExtensionNodeType.xml  ExtensionNodeTypeCollection.xml  ExtensionPoint.xml  ExtensionPointCollection.xml  ModuleCollection.xml  ModuleDescription.xml  NativeDependency.xml  NodeSetIdCollection.xml  NodeTypeAttribute.xml  NodeTypeAttributeCollection.xml  ObjectDescription.xml  ObjectDescriptionCollection.xml
mautil/: ChangeLog  Main.cs  Makefile.am  mautil.1  mautil.csproj  mautil.in  mautil.mdp
(+379 files in other folders)
